--- a/index.html
+++ b/index.html
@@ -5,6 +5,176 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header content-section">
+      <nav class="header-menu">
+        <ul class="header-menu-list">
+          <li class="header-menu-item header-menu-item-active">
+            <a class="header-menu-link">главная</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="#0">посмотреть лоты</a> <!-- Вставить ссылку на лоты -->
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="#0">об аукционе</a> <!-- Вставить ссылку на аукцион -->
+          </li>
+        </ul>
+      </nav>
+      <a class="header-logo">
+        <img
+          class="header-logo-image"
+          src="images/logo-black.svg"
+          alt="Логотип"
+        />
+      </a>
+      <address class="adress">
+        <ul class="adress-list">
+          <li><a class="adress-link" href="tel: +9 999 555 5555">+9 999 555 5555</a>
+          </li>
+          <li><a class="adress-link" href="mailto: info@sobaka.ge">info@sobaka.ge</a>
+          </li>
+          <li><p class="adress-text">наб. Принсенграхт 263-265,<br/>Амстердам</p>
+          </li>
+        </ul>
+      </address>
+    </header>
+
+    <main>
+      <section class="cover content-section">
+
+        <div class="overlay"></div>
+
+          <h1 class="cover-title">
+            <span class="align-text">
+              о<span class="letter-spaicing-extended">н</span><span class="no-letter-spacing">о</span>
+            </span>
+            <span class="align-text-center">
+              те<span class="letter-spaicing-extended">б</span><span class="no-letter-spacing">е</span>
+            </span>
+            <span class="align-text-right">
+              <span class="letter-spaicing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+            </span>
+          </h1>
+
+          <div class="cover-description">
+            <h2 class="cover-description-text">Аукцион вещей, в которые никто не верил</h2>
+            <button class="bet-button">Сделать ставку</button>
+          </div>
+
+
+      </section>
+      <section class="lots content-section">
+        <h3 class="lots-heading">Лоты</h3>
+        <ul class="lots-card-list">
+          <li class="lots-card-list-item">
+            <a class="card-link" href="#0"> <!-- Вставить ссылку на фильм -->
+              <article class="card card-type-film">
+                <div class="overlay"></div>
+                <h4 class="card-title">Фильм режиссёра, который бросил киношколу</h4>
+                <p class="card-text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots-card-list-item">
+            <a class="card-link" href="#0"> <!-- Вставить ссылку на книгу -->
+              <article class="card card-type-book">
+                <div class="overlay"></div>
+                <h4 class="card-title">Книга, где описан один скучный день из жизни рекламного агента</h4>
+                <p class="card-text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots-card-list-item">
+            <a class="card-link" href="#0"> <!-- Вставить сслыку на картину -->
+              <article class="card card-type-picture">
+                <div class="overlay"></div>
+                <h4 class="card-title">Картина, которую повторит даже 5-летний сын маминой подруги</h4>
+                <p class="card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="#0" class="lots-look-more-link">посмотреть больше</a> <!-- Вставить сслыку на остальные лоты -->
+      </section>
+      <section class="about content-section">
+        <div class="about-column">
+          <div class="about-logo">
+            <img
+              class="about-logo-image"
+              src="images/logo-white.svg" 
+              alt="Логотип"
+            >
+          </div>
+          <div>
+            <h3 class="about-title">Об аукционе</h3>
+            <div class="about-all-text">
+              <p class="about-text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+              <p class="about-text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer content-section">
+      <address class="adress">
+        <ul class="adress-list">
+          <li><a class="adress-link" href="tel: +9 999 555 5555">+9 999 555 5555</a>
+          </li>
+          <li><a class="adress-link" href="mailto: info@sobaka.ge">info@sobaka.ge</a>
+          </li>
+          <li><p class="adress-text">наб. Принсенграхт 263-265,<br/>Амстердам</p>
+          </li>
+        </ul>
+      </address>
+
+      <nav class="footer-menu">
+        <ul class="footer-menu-list">
+          <li class="footer-menu-item footer-menu-item-active">
+            <a class="footer-menu-link">главная</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-menu-link" href="#0">посмотреть лоты</a> <!-- Вставить ссылку на лоты -->
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-menu-link" href="#0">об аукционе</a> <!-- Вставить ссылку на аукцион -->
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="footer-social-list">
+        <li class="footer-social-list-item">
+          <a class="footer-social-link" href="#0"> <!-- Вставить ссылку на ютуб -->
+            <img 
+            class="footer-social-icon"
+            src="images/yt.svg" 
+            alt="Иконка Ютуб"
+            >
+          </a>
+        </li>
+        <li class="footer-social-list-item">
+          <a class="footer-social-link" href="#0"> <!-- Вставить ссылку на вк -->
+            <img 
+            class="footer-social-icon"
+            src="images/vk.svg" 
+            alt="Иконка ВКонтакте"
+            >
+          </a>
+        </li>
+        <li class="footer-social-list-item">
+          <a class="footer-social-link" href="#0"> <!-- Вставить ссылку на пинтерест -->
+            <img 
+            class="footer-social-icon"
+            src="images/pinterest.svg" 
+            alt="Иконка Пинтерест"
+            >
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
