--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <footer class="footer content-section">
       <address class="adress">
         <ul class="adress-list">
-          <li><a class="adress-link" href="tel: +9 999 555 5555">+9 999 555 5555</a>
+          <li><a class="adress-link" href="tel:+99995555555">+9 999 555 5555</a>
           </li>
           <li><a class="adress-link" href="mailto: info@sobaka.ge">info@sobaka.ge</a>
           </li>
