--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a class="header-logo">
         <img
           class="header-logo-image"
-          src="/images/logo-black.svg"
+          src="../images/logo-black.svg"
           alt="Логотип"
         />
       </a>
@@ -37,7 +37,7 @@
           </li>
           <li><a class="adress-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li><p class="adress-text">наб. Принсенграхт 263-265,<br/>Амстердам</p>
+          <li><p class="adress-text">наб. Принсенграхт 263-265, Амстердам</p>
           </li>
         </ul>
       </address>
@@ -61,20 +61,20 @@
           </h1>
 
           <div class="cover-description">
-            <h2 class="cover-description-text">Аукцион вещей, в которые никто не верил</h2>
-            <button class="bet-button">Сделать ставку</button>
+            <p class="cover-description-text">Аукцион вещей, в которые никто не верил</p>
+            <button type="button" class="bet-button">Сделать ставку</button>
           </div>
 
 
       </section>
       <section class="lots content-section">
-        <h3 class="lots-heading">Лоты</h3>
+        <h2 class="lots-heading">Лоты</h2>
         <ul class="lots-card-list">
           <li class="lots-card-list-item">
             <a class="card-link" href="#0"> <!-- Вставить ссылку на фильм -->
               <article class="card card-type-film">
                 <div class="overlay"></div>
-                <h4 class="card-title">Фильм режиссёра, который бросил киношколу</h4>
+                <h3 class="card-title">Фильм режиссёра, который бросил киношколу</h3>
                 <p class="card-text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
@@ -83,7 +83,7 @@
             <a class="card-link" href="#0"> <!-- Вставить ссылку на книгу -->
               <article class="card card-type-book">
                 <div class="overlay"></div>
-                <h4 class="card-title">Книга, где описан один скучный день из жизни рекламного агента</h4>
+                <h3 class="card-title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="card-text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
             </a>
@@ -92,7 +92,7 @@
             <a class="card-link" href="#0"> <!-- Вставить сслыку на картину -->
               <article class="card card-type-picture">
                 <div class="overlay"></div>
-                <h4 class="card-title">Картина, которую повторит даже 5-летний сын маминой подруги</h4>
+                <h3 class="card-title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
             </a>
@@ -110,7 +110,7 @@
             >
           </div>
           <div>
-            <h3 class="about-title">Об аукционе</h3>
+            <h2 class="about-title">Об аукционе</h2>
             <div class="about-all-text">
               <p class="about-text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
               <p class="about-text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
