--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a class="header-logo">
         <img
           class="header-logo-image"
-          src="../images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Логотип"
         />
       </a>
@@ -127,7 +127,7 @@
           </li>
           <li><a class="adress-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li><p class="adress-text">наб. Принсенграхт 263-265,<br/>Амстердам</p>
+          <li><p class="adress-text">наб. Принсенграхт 263-265, Амстердам</p>
           </li>
         </ul>
       </address>
